--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   timelines: ^0.1.0
   google_maps_flutter: ^2.1.7
   geolocator: ^8.1.1
+  sizer: ^2.0.15
 
 dev_dependencies:
   flutter_test:
